<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#333333"
    android:layout_gravity="center"
    android:id="@+id/cl_bottom_control_panel"
    tools:ignore="ContentDescription"
    tools:context=".fragment.BottomControlPanelFragment">

    <TextView
        android:id="@+id/btn_call_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/title_call_audio_normal"
        android:drawableTop="@drawable/svg_icon_audio_normal"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_call_audio_normal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_small_text_size"
        android:gravity="center"/>

    <TextView
        android:id="@+id/btn_call_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/title_call_video_normal"
        android:drawableTop="@drawable/svg_icon_video_normal"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_call_video_normal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_small_text_size"
        android:gravity="center" />

    <TextView
        android:id="@+id/btn_call_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/title_call_share"
        android:drawableTop="@drawable/svg_icon_wb_normal"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_call_share"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_small_text_size"
        android:gravity="center" />

    <TextView
        android:id="@+id/btn_call_user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/title_call_user"
        android:drawableTop="@drawable/svg_icon_user"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_call_user"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_small_text_size"
        android:gravity="center" />

    <TextView
        android:id="@+id/btn_call_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/title_call_more"
        android:drawableTop="@drawable/svg_icon_more"
        android:drawablePadding="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_call_more"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_small_text_size"
        android:gravity="center"/>

</LinearLayout>