<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SpeakerFragment">

    <fragment
        android:id="@+id/SpeakerFragment"
        android:name="video.pano.panocall.fragment.SpeakerFragment"
        android:label="@string/speaker_fragment_label"
        tools:layout="@layout/fragment_speaker">

        <argument
            android:name="key_grid_pos"
            android:defaultValue="0"
            app:argType="integer" />


        <action
            android:id="@+id/action_SpeakerFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment"/>
        <action
            android:id="@+id/action_SpeakerFragment_to_WhiteboardFragment"
            app:destination="@id/WhiteboardFragment"/>
        <action
            android:id="@+id/action_SpeakerFragment_to_UserListFragment"
            app:destination="@id/UserListFragment"/>
    </fragment>
    <fragment
        android:id="@+id/GalleryFragment"
        android:name="video.pano.panocall.fragment.GalleryFragment"
        android:label="@string/gallery_fragment_label"
        tools:layout="@layout/fragment_gallery">

        <argument
            android:name="key_grid_pos"
            android:defaultValue="0"
            app:argType="integer" />

        <action
            android:id="@+id/action_GalleryFragment_to_SpeakerFragment"
            app:destination="@id/SpeakerFragment"/>
        <action
            android:id="@+id/action_GalleryFragment_to_WhiteboardFragment"
            app:destination="@id/WhiteboardFragment"
             />
        <action
            android:id="@+id/action_GalleryFragment_to_UserListFragment"
            app:destination="@id/UserListFragment" />
        <action
            android:id="@+id/action_GalleryFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
    </fragment>

    <fragment
        android:id="@+id/WhiteboardFragment"
        android:name="video.pano.panocall.fragment.WhiteboardFragment"
        android:label="@string/whiteboard_fragment_label"
        tools:layout="@layout/fragment_whiteboard">

        <action
            android:id="@+id/action_WhiteboardFragment_to_SpeakerFragment"
            app:destination="@id/SpeakerFragment" />
    </fragment>

    <fragment
        android:id="@+id/UserListFragment"
        android:name="video.pano.panocall.fragment.UserListFragment"
        android:label="@string/user_list_fragment_label"
        tools:layout="@layout/fragment_user_list">

        <action
            android:id="@+id/action_UserListFragment_to_SpeakerFragment"
            app:destination="@id/SpeakerFragment" />
        <action
            android:id="@+id/action_UserListFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
        <action
            android:id="@+id/action_UserListFragment_to_WhiteboardFragment"
            app:destination="@id/WhiteboardFragment" />
    </fragment>
</navigation>
