<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FeedbackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_feedback_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16.5dp"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_feedback_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_feedback_type"
            android:textSize="14sp"
            android:textColor="@color/color333333"
            android:drawableStart="@drawable/svg_icon_required"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback_type">

            <RadioButton
                android:id="@+id/radio_feedback_type_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:gravity="center"
                android:button="@null"
                android:textSize="14sp"
                android:textColor="@color/setting_video_resolution_text_color"
                android:background="@drawable/btn_setting_radio_bg"
                android:text="@string/title_audio" />

            <RadioButton
                android:id="@+id/radio_feedback_type_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:gravity="center"
                android:button="@null"
                android:textSize="14sp"
                android:textColor="@color/setting_video_resolution_text_color"
                android:background="@drawable/btn_setting_radio_bg"
                android:text="@string/title_video" />

            <RadioButton
                android:id="@+id/radio_feedback_type_whiteboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:gravity="center"
                android:button="@null"
                android:textSize="14sp"
                android:textColor="@color/setting_video_resolution_text_color"
                android:background="@drawable/btn_setting_radio_bg"
                android:text="@string/title_whiteboard" />

            <RadioButton
                android:id="@+id/radio_feedback_type_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:gravity="center"
                android:button="@null"
                android:textSize="14sp"
                android:textColor="@color/setting_video_resolution_text_color"
                android:background="@drawable/btn_setting_radio_bg"
                android:checked="true"
                android:text="@string/title_feedback_type_general" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_feedback_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cl_feedback_type">

        <TextView
            android:id="@+id/tv_feedback_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16.5dp"
            android:text="@string/title_feedback_desc"
            android:textSize="14sp"
            android:textColor="@color/color333333"
            android:drawableStart="@drawable/svg_icon_required"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_feedback_desc"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:ems="10"
            android:maxLength="300"
            android:gravity="start|top"
            android:hint="@string/hint_feedback_desc"
            android:inputType="textMultiLine"
            android:paddingStart="28.5dp"
            android:paddingEnd="28.5dp"
            android:paddingBottom="30dp"
            android:paddingTop="10dp"
            android:textColor="@color/color333333"
            android:textColorHint="@color/color999999"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback_desc" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorCCCCCC"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_feedback_desc"
            app:layout_constraintEnd_toEndOf="@+id/edit_feedback_desc"
            tools:text="剩余300字" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_feedback_upload_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16.5dp"
        android:paddingTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/cl_feedback_desc">

        <TextView
            android:id="@+id/tv_feedback_upload_log"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_feedback_upload_log"
            android:textColor="@color/color333333"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_feedback_upload_log"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:thumb="@drawable/switch_thumb_setting_video_selector"
            android:track="@drawable/switch_track_setting_video_selector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <View
            android:id="@+id/view_divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorDDDDDD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback_upload_log"
            />

        <TextView
            android:id="@+id/tv_feedback_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/color333333"
            android:textSize="14sp"
            android:text="@string/title_feedback_contact"
            app:layout_constraintTop_toBottomOf="@+id/view_divider1"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_feedback_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_feedback_contact"
            android:textColorHint="@color/color999999"
            android:background="@color/colorWhite"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_feedback_contact"
            app:layout_constraintTop_toBottomOf="@+id/view_divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_feedback_contact" />

        <View
            android:id="@+id/view_divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorDDDDDD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback_contact"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16.5dp"
        android:background="@drawable/radio_border_blue_2dp"
        android:text="@string/title_button_send"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_feedback_upload_log"
        />

</androidx.constraintlayout.widget.ConstraintLayout>